--- a/style.css
+++ b/style.css
@@ -28,3 +28,6 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 
 }   
 }
+.xpro-post-grid-content a {
+	color: green;
+}
