--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,3 +2,5 @@ $primaryColor: #4b00e7;
 $secondaryColor: #61ce70;
 $hoverColor: #8c0971;
 $textColor: #000000;
+$colorWhite: #ffffff;
+$colorBlack: #000000;
