--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,5 @@
-@import "base";
+@import "variables";
+@import "utility";
 
 a {
   color: $secondaryColor;
@@ -7,4 +8,32 @@ a {
   :hover{
     color: $hoverColor;
   }
+}
+
+.mega-menu-wrap{
+  background-color: $colorWhite !important;
+  
+  li.mega-menu-item {
+
+    a.mega-menu-link{
+      color: colorTheme($colorWhite) !important;
+    }
+    
+  }
+
+  li.mega-menu-item.mega-current-menu-item{
+    
+    a.mega-menu-link
+    {
+      background: $primaryColor!important;
+      color: #ffffff!important;
+    }
+  }
+  
+  
+
+}
+
+.page-header .entry-title {
+	color: colorTheme(#ffffff) !important;
 }
